fixed font size on safari and checkbox

--- a/poc/quiz/static/style/home.css
+++ b/poc/quiz/static/style/home.css
@@ -26,7 +26,7 @@
 
 }
 .title {
-    font-size: xxx-large;
+    font-size: 48px;
     text-align: center;
     font-weight: bolder;
 }
